--- a/style/media.css
+++ b/style/media.css
@@ -12,7 +12,7 @@
     visibility: hidden;
     position: absolute;
     top: 60px;
-    right: 0;
+    right: 57px;
     width: 20%;
     text-align: right;
     padding-right: 10px;
@@ -365,7 +365,7 @@
 @media(max-width: 565px) {
   /*Main*/
   .main__info__title h1 {
-    font-size: 45px;
+    font-size: 42px;
     line-height: 59px;
   }
   .main_info_title_img {
@@ -422,7 +422,7 @@
   }
   /*Join*/
   .join__input {
-    width: 319px;
+    width: 285px;
     height: 44px;
   }
   .join__input::placeholder {
