--- a/style/style.css
+++ b/style/style.css
@@ -472,6 +472,7 @@ html, body {
 
 .characters__image__img {
   width: 100%;
+  height: 600px;
 }
 
 .characters__info{
@@ -594,8 +595,10 @@ html, body {
   flex-wrap: wrap;
   height: 723px;
   overflow: hidden;
-  
+
 }
+
+
 .target {
   background-size: cover;
   background-position:center;
@@ -715,6 +718,12 @@ html, body {
   font-size: 23px;
   line-height: 34px;
   color: #fff;
+  transition: 0.2s;
+}
+
+.news__right__item__text:hover {
+  color: var(--brand-color);
+  text-shadow: 1px 1px 1px 1px var(--brand-color);
 }
 
 /* News
@@ -878,5 +887,22 @@ html, body {
 }
 
 
+/** Modal **/
+.modal {
+  display: none;
+  align-items:center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+}
 
+.modal_content {
+  height: 400px;
+  width: 400px;
+  background-color: #fff;
+}
 
