--- a/style/media.css
+++ b/style/media.css
@@ -259,6 +259,10 @@
   .characters__image {
     width: 75%;
   }
+  .characters__image__img {
+    width: 100%;
+    height: 500px;
+  }
   .active {
     outline: 6px solid #3B3D46;
   }
@@ -419,6 +423,11 @@
     font-size: 16px;
     line-height: 26px;
     margin-bottom: 45px;
+  }
+
+  .characters__image__img {
+    width: 100%;
+    height: 450px;
   }
   /*Join*/
   .join__input {
